--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,11 @@
     "manifest_version": 3,
     "action": {
       "default_popup": "src/index.html",
-      "default_icon": "connections.png"
+      "default_icon": {
+          "16": "connections.png",
+          "48": "connections.png",
+          "128": "connections.png"
+      }
     },
     "commands": {
         "_execute_action": {
