--- a/manifest.json
+++ b/manifest.json
@@ -3,12 +3,12 @@
     "description": "An extension for saving new connection's contact info",
     "version": "1.0",
     "manifest_version": 3,
+    "icons": {
+      "16": "connections_16.png",
+      "128": "connections_128.png"
+    },
     "action": {
-      "default_popup": "src/index.html",
-      "default_icon": {
-          "16": "connections_16.png",
-          "128": "connections_128.png"
-      }
+      "default_popup": "src/index.html"
     },
     "commands": {
         "_execute_action": {
