--- a/manifest.json
+++ b/manifest.json
@@ -2,6 +2,10 @@
     "name": "Connections",
     "description": "An extension for saving new connection's contact info",
     "version": "1.0",
+    "permissions": [
+      "https://developer.chrome.com/*",
+      "https://*.google.com/*"
+    ],
     "manifest_version": 3,
     "icons": {
       "16": "connections_16.png",
